# virgil

./: Cargo.toml  alloc.c  array.c  flake.nix  for.c  graphics.c  parser.c  ptrptr.c  string.c  test.c  test2.c  test3.c  todo.org  while.c
data/: extract.sh
docs/: vm.org
doom/: .gitignore  Makefile  all.c  limits  limits.c
doom/doomgeneric/: am_map.c  d_iwad.c  d_loop.c  d_main.c  d_net.c  doomdef.h  doomgeneric.c  doomgeneric.h  doomgeneric_sdl.c  doomtype.h  f_finale.c  f_wipe.c  g_game.c  gusconf.c  hu_lib.c  hu_stuff.c  i_cdmus.c  i_endoom.c  i_input.c  i_joystick.c  i_scale.c  i_sound.c  i_system.c  i_timer.c  i_video.c  m_argv.c  m_cheat.c  m_config.c  m_controls.c  m_fixed.c  m_menu.c  m_misc.c  m_misc.h  memio.c  p_enemy.c  p_map.c  p_maputl.c  p_mobj.c  p_saveg.c  p_setup.c  (+21 more)
nix/: flake.nix
scratch/: alloc.c  for.c  simple.c  struct.c
src/: analyze.rs  compiler.rs  main.rs  video.rs  vm.rs
src/compiler/: debug.rs
